fix: increase minimum height of image cards for better visibility

--- a/Css/Global.css
+++ b/Css/Global.css
@@ -56,7 +56,7 @@ section {
     width: 100%;
     display: block;
     border-radius: 0;
-    min-height: 300px;
+    min-height: 500px;
     /* no margin, no spacing */
 }
 
